--- a/EasyProduction/app/src/main/AndroidManifest.xml
+++ b/EasyProduction/app/src/main/AndroidManifest.xml
@@ -11,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyProduction">
-        <activity android:name=".RobotStateActivity"></activity>
+        <service
+            android:name=".NetworkService"
+            android:enabled="true"
+            android:exported="true"></service>
+
+        <activity android:name=".RobotStateActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
