--- a/EasyProduction/app/src/main/AndroidManifest.xml
+++ b/EasyProduction/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.upc.EasyProduction">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
