--- a/EasyProduction/app/src/main/AndroidManifest.xml
+++ b/EasyProduction/app/src/main/AndroidManifest.xml
@@ -13,18 +13,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyProduction">
-        <activity android:name=".MessageActivity"
-            android:parentActivityName=".MainActivity"></activity>
-        <activity android:name=".GlobalVariablesActivity"
+        <activity android:name=".GuideActivity"
+            android:parentActivityName=".RobotStateActivity">
+        </activity>
+        <activity android:name=".AboutActivity"
             android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".MessageActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".GlobalVariablesActivity"
+            android:parentActivityName=".MainActivity" />
 
         <service
             android:name=".NetworkService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".RobotStateActivity"
-            android:parentActivityName=".MainActivity"/>
+        <activity
+            android:name=".RobotStateActivity"
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
